# cppmath

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  notes.txt
.clangd/index/: cppmath.cpp.3C65BBD54D7019C4.idx  doctest.h.EA5049604AFB6D2B.idx  example.cpp.25F2BC712C221BD7.idx  main.cpp.0DF2A8D27FCF387A.idx  type_tool.h.19925BEDBF6C9483.idx
.github/hooks/: pre-commit.pl
.github/workflows/: dev.yml
cmake/: cppmath.pc.in  cppmathCPack.cmake  cppmathConfig.cmake.in  ide.cmake  utils.cmake
example/: CMakeLists.txt  example.cpp
include/cppmath/: cppmath.h  type_tool.h  type_vector.h  vec2.h  version.h  version.h.in
include/cppmath/vec/: swizzle_functions.h  vec2.h  vec_base.h  vec_types.h
include/linalg/: export.h  linalg.h  type_tools.h  version.h  version.h.in
include/linalg/vec/: swizzle_functions.h  vec2.h  vec3.h  vec_base.h  vec_types.h
src/: cppmath.cpp  linalg.cpp
tests/: CMakeLists.txt  timer.h  type_tool.cpp  type_tools.cpp  vec2.cpp
